DASH-156 Fixing the criteria in the queries that select items for display in news section.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313135 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -493,7 +493,7 @@ st.id as type_id, st.identifier as type_identifier, st.access_permission as type
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
 from (select t4.gr_id as gr_id from (select dni.grouping_id as gr_id,count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
-where dp.sakai_id=? group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
+where dp.sakai_id=? and dnl.hidden=0 group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
 join dash_news_item ni on ni.grouping_id=t5.gr_id join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type join dash_news_link nl on ni.id=nl.item_id \
 join dash_person usr on usr.id=nl.person_id where usr.sakai_id=?) \
@@ -516,7 +516,7 @@ st.id as type_id, st.identifier as type_identifier, st.access_permission as type
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
 from (select t4.gr_id as gr_id from (select dni.grouping_id as gr_id,count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
-where dp.sakai_id=? and dc.context_id=? group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
+where dp.sakai_id=? and dc.context_id=? and dnl.hidden=0 group by dni.grouping_id) t4 where t4.gr_ct <= ?) t5 \
 join dash_news_item ni on ni.grouping_id=t5.gr_id join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type join dash_news_link nl on ni.id=nl.item_id \
 join dash_person usr on usr.id=nl.person_id where usr.sakai_id=?) \
@@ -655,7 +655,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from (select t4.gr_id as gr_id from \
 (select dni.grouping_id as gr_id, count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
-join dash_news_item dni on dni.id=dnl.item_id where dp.sakai_id=? group by dni.grouping_id) t4 \
+join dash_news_item dni on dni.id=dnl.item_id where dp.sakai_id=? and dnl.hidden=0 group by dni.grouping_id) t4 \
 where t4.gr_ct <= ?) t5 \
 join dash_news_item ni on t5.gr_id=ni.grouping_id \
 join dash_news_link link on link.item_id=ni.id \
@@ -690,7 +690,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from (select t4.gr_id as gr_id \
 from (select dni.grouping_id as gr_id, count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
-join dash_news_item dni on dni.id=dnl.item_id where dp.sakai_id=? group by dni.grouping_id) t4 \
+join dash_news_item dni on dni.id=dnl.item_id where dp.sakai_id=? and dnl.hidden=0 group by dni.grouping_id) t4 \
 where t4.gr_ct <= ?) t5 \
 join dash_news_item ni on t5.gr_id=ni.grouping_id \
 join dash_news_link link on link.item_id=ni.id \
