DASH-170 Lowered level of empty results messages from ERROR to DEBUG. Lowered level of other error messages in DAO to WARN. Fixed stray errors in SQL.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313142 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -797,7 +797,7 @@ rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_sub
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_repeating_event rep join dash_context site on site.id=rep.context_id join dash_sourcetype st on st.id=rep.entity_type \
-order by rep.calendar_time asc
+order by rep.first_time asc
 
 select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
 join dash_calendar_link link on link.person_id=person.id join dash_calendar_item item on link.item_id=item.id \
