DASH-168 Added hidden label to item titles saying "(click to view details)"
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313148 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -112,6 +112,8 @@ dash.unstar	= Unstar this
 dash.hide	= Hide this
 dash.show	= Show this
 
+dash.details = (click to view details)
+
 dash.grouped.title = {0} items of type {1} added to the {2} site
 dash.grouped.more.status =  Showing {0} of {1} items
 dash.grouped.more.link = Show more...
