--- a/tool/src/webapp/WEB-INF/web.xml
+++ b/tool/src/webapp/WEB-INF/web.xml
@@ -20,8 +20,8 @@
 	<!-- Deploy mode -->
 	<context-param>
             <param-name>configuration</param-name>
-            <param-value>development</param-value>
-            <!--  <param-value>deployment</param-value> -->
+            <!-- <param-value>development</param-value> -->
+            <param-value>deployment</param-value>
 	</context-param>
 
 
