DASH-181 properties file updated
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313161 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -78,7 +78,7 @@ dash.calendar.past 			= Past
 dash.calendar.starred		= Starred
 dash.calendar.hidden		= Hidden
 
-dash.calendar.noupcoming	= You have no upcoming calendar items.
+dash.calendar.noupcoming	= You have no upcoming items.
 dash.calendar.nopast 		= You have no past calendar items.
 dash.calendar.nostarred		= You have not starred any calendar items.
 dash.calendar.nohidden		= You have not hidden any calendar items.
