DASH-200 Deal with null value for CalendarItem.sequenceNumber when updating time.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313178 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -582,6 +582,8 @@ select.SourceType.by.identifier = select st.id as type_id, st.identifier as type
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
 
+update.CalendarItem.calendarTime.entityReference.labelKey = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num is NULL
+
 update.CalendarItem.calendarTime.entityReference.labelKey.sequenceNumber = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num=?
 
 update.CalendarItem.title = update dash_calendar_item set title=? where id=?
