--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -568,6 +568,8 @@ from dash_sourcetype st where identifier=?
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
 
+update.CalendarItem.calendarTime.entityReference.labelKey = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num is NULL
+
 update.CalendarItem.calendarTime.entityReference.labelKey.sequenceNumber = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num=?
 
 update.CalendarItem.title = update dash_calendar_item set title=? where id=?
