DASH-181 updated remaining calendar items in properties file
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313182 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -79,9 +79,9 @@ dash.calendar.starred		= Starred
 dash.calendar.hidden		= Hidden
 
 dash.calendar.noupcoming	= You have no upcoming items.
-dash.calendar.nopast 		= You have no past calendar items.
-dash.calendar.nostarred		= You have not starred any calendar items.
-dash.calendar.nohidden		= You have not hidden any calendar items.
+dash.calendar.nopast 		= You have no past items.
+dash.calendar.nostarred		= You have not starred any items.
+dash.calendar.nohidden		= You have not hidden any items.
 dash.calendar.linksCount		= {0} items
 dash.calendar.linksCount0		= No items
 dash.calendar.linksCount1		= Showing 1 item
