--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>ehcache-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 		</dependency>
