DASH-207 Fixing Oracle syntax.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313190 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -48,8 +48,8 @@ context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id)
 
-create.EventLog.table = create table dash_event (event_id number, event_date timestamp with timezone, event varchar2 (32), \
-ref varchar2 (255), context varchar2 (255), session_id varchar2 (163), event_code varchar2 (1), primary key (event_id)); \
+create.EventLog.table = create table dash_event (event_id number not null primary key, event_date timestamp with time zone, \
+event varchar2 (32), ref varchar2 (255), context varchar2 (255), session_id varchar2 (163), event_code varchar2 (1)); \
 create unique index dash_event_index on dash_event (event_id asc); \
 create sequence dash_event_seq start with 1 increment by 1 nomaxvalue
 
