DASH-213 Check whether definition of SourceType has changed and update if need be.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313200 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -598,4 +598,6 @@ update.RepeatingEventsTime.entityReference = update dash_repeating_event set fir
 
 update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
 
+update.SourceType.identifier = update dash_sourcetype set access_permission = ?, always_access_permission = ? where identifier = ?
+
 
