--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -612,5 +612,5 @@ update.RepeatingEventsTime.entityReference = update dash_repeating_event set fir
 
 update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
 
-
+update.SourceType.identifier = update dash_sourcetype set access_permission = ?, always_access_permission = ? where identifier = ?
 
