DASH-212 Make sure that CalendarItem is saved correctly before trying to add links.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313208 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -190,6 +190,17 @@ rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_tit
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id where ci.entity_ref=?
 
+select.CalendarItems.by.repeatingEvent = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
+ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype \ 
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where ci.repeating_event_id=? order by ci.calendar_time asc
+
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
 ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
@@ -572,6 +583,12 @@ where item.entity_ref=?
 
 select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier \
 from dash_sourcetype st where identifier=?
+
+update.CalendarItem = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
+entity_ref = ?, subtype = ?, entity_type = ?, context_id = ? repeating_event_id = NULL, sequence_num = NULL where id = ?
+
+insert.CalendarItem.repeats = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
+entity_ref = ?, subtype = ?, entity_type = ?, context_id = ?, repeating_event_id = ?, sequence_num = ? where id = ?
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
 
