DASH-210 fix a typo in oracle.properties file introduced in r79010
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313209 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -589,7 +589,7 @@ select.sakaiUserIds.in.newsLinks.by.entityReference = select person.sakai_id fro
 join dash_news_link link on link.person_id=person.id join dash_news_item item on link.item_id=item.id \
 where item.entity_ref=?  
 
-select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier,  from dash_sourcetype st where identifier=?
+select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier  from dash_sourcetype st where identifier=?
 
 update.CalendarItem = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
 entity_ref = ?, subtype = ?, entity_type = ?, context_id = ? repeating_event_id = NULL, sequence_num = NULL where id = ?
