--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -550,6 +550,8 @@ where usr.sakai_id=? and site.context_id=? and link.hidden=1 order by ni.news_ti
 
 select.Person.by.sakaiId = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where sakai_id=?
 
+select.Person.sakaiId.by.calendarLink = select usr.sakai_id from dash_person usr join dash_calendar_link link on link.person_id=usr.id where link.item_id=?
+
 select.RepeatingCalendarItem.by.entityReference.calendarTimeLabelKey = select rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, \
 rep.frequency as rep_frequency, rep.max_count as rep_count, rep.calendar_time_label_key as rep_calendar_time_label_key, \
 rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_subtype, \
@@ -580,7 +582,7 @@ from dash_sourcetype st where identifier=?
 update.CalendarItem = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
 entity_ref = ?, subtype = ?, entity_type = ?, context_id = ? repeating_event_id = NULL, sequence_num = NULL where id = ?
 
-insert.CalendarItem.repeats = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
+update.CalendarItem.repeats = update dash_calendar_item set calendar_time = ?, calendar_time_label_key = ?, title = ?, \
 entity_ref = ?, subtype = ?, entity_type = ?, context_id = ?, repeating_event_id = ?, sequence_num = ? where id = ?
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
