DASH-216 Added support for expiring links and purging items with no links.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313217 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -25,9 +25,12 @@ create unique index dash_config_name_idx on dash_config(property_name); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_PANEL', 5); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_DISCLOSURE', 20); \
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
-insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HIDDEN_ITEMS_AFTER_WEEKS', 4); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_NEWS_ITEMS_AFTER_WEEKS', 8); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_NEWS_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HIDDEN_NEWS_ITEMS_AFTER_WEEKS', 4); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_CALENDAR_ITEMS_AFTER_WEEKS', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_CALENDAR_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HIDDEN_CALENDAR_ITEMS_AFTER_WEEKS', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
 insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1); \
@@ -80,19 +83,27 @@ delete.AvailabilityChecks.by.entityReference = delete from dash_availability_che
 
 delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
+delete.CalendarItems.no.links = delete item from dash_calendar_item item left join dash_calendar_link link on item.id=link.item_id where link.id is null;
+
 delete.CalendarLink.by.personId.itemId = delete from dash_calendar_link where person_id=? and item_id=?
 
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
 delete.CalendarLinks.by.person.context = delete from dash_calendar_link where person_id=? and context_id=?
 
+delete.CalendarLinks.by.item_calendarTime.starred.hidden = delete from dash_calendar_link where item_id in (select id from dash_calendar_item where calendar_time < ?) and sticky=? and hidden=?
+
 delete.NewsItem.by.id = delete from dash_news_item where id=?
+
+delete.NewsItems.no.links = delete item from dash_news_item item left join dash_news_link link on item.id=link.item_id where link.id is null
 
 delete.NewsLink.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
 
 delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
 delete.NewsLinks.by.person.context = delete from dash_news_link where person_id=? and context_id=?
+
+delete.NewsLinks.by.item_newsTime.starred.hidden = delete from dash_news_link where item_id in (select id from dash_news_item where news_time < ?) and sticky=? and hidden=?
 
 insert.AvailabilityCheck = insert into dash_availability_check (entity_ref, entity_type_id, scheduled_time) \
 values (?, ?, ?)
