DASH-216 Added checks to see whether to expire particular kinds of links and whether to purge links.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313218 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -31,6 +31,8 @@ insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HID
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_CALENDAR_ITEMS_AFTER_WEEKS', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_CALENDAR_ITEMS_AFTER_WEEKS', 26); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HIDDEN_CALENDAR_ITEMS_AFTER_WEEKS', 1); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_NEWS_ITEMS_WITH_NO_LINKS', 1); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_CALENDAR_ITEMS_WITH_NO_LINKS', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
 insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1); \
