--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -35,6 +35,8 @@ insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_REMOVE_HIDDEN_ITEMS_AFTER_WEEKS', 4); \
+insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_REMOVE_NEWS_ITEMS_WITH_NO_LINKS', 1); \
+insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_REMOVE_CALENDAR_ITEMS_WITH_NO_LINKS', 1); \
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_WEEKS_TO_HORIZON', 4); \
 insert into dash_config (id, property_name, property_value) values (NULL, 'PROP_MOTD_MODE', 1); \
