--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -86,7 +86,7 @@ delete.AvailabilityChecks.by.entityReference = delete from dash_availability_che
 
 delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
-delete.CalendarItems.no.links = delete dash_calendar_item from dash_calendar_item item left join dash_calendar_link link on item.id=link.item_id where link.id is null;
+delete.CalendarItems.no.links = delete from dash_calendar_item item where not exists (select * from dash_calendar_link link where item.id=link.item_id)
 
 delete.CalendarLink.by.personId.itemId = delete from dash_calendar_link where person_id=? and item_id=?
 
@@ -97,6 +97,8 @@ delete.CalendarLinks.by.person.context = delete from dash_calendar_link where pe
 delete.CalendarLinks.by.item_calendarTime.starred.hidden = delete from dash_calendar_link where item_id in (select id from dash_calendar_item where calendar_time < ?) and sticky=? and hidden=?
 
 delete.NewsItem.by.id = delete from dash_news_item where id=?
+
+delete.NewsItems.no.links = delete from dash_news_item item where not exists (select * from dash_news_link link where item.id=link.item_id)
 
 delete.NewsLink.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
 
