DASH-230 added build profile sakai-2.9
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313225 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -191,4 +191,22 @@
     <module>util</module>
     <module>pack</module>
   </modules>
+  
+	<profiles>
+		<profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <sakai.version>2.10-SNAPSHOT</sakai.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>sakai-2.9</id>
+            <properties>
+                <sakai.version>2.9-SNAPSHOT</sakai.version>
+            </properties>
+        </profile>
+	</profiles>
 </project>
