DASH-231 updated pom.xml files to make dashboard trunk buildable again with Sakai 2.10 trunk code
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313234 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -16,10 +16,34 @@
   	<dependencies>
         
     	<!-- project dependencies -->
-    	<dependency>
-			<groupId>org.sakaiproject.dash</groupId>
+	<dependency>
+		<groupId>org.sakaiproject.assignment</groupId>
+		<artifactId>sakai-assignment-api</artifactId>
+	        <version>${sakai.version}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject.announcement</groupId>
+		<artifactId>sakai-announcement-api</artifactId>
+		<version>${sakai.version}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject.calendar</groupId>
+		<artifactId>sakai-calendar-api</artifactId>
+		<version>${sakai.version}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject.message</groupId>
+		<artifactId>sakai-message-api</artifactId>
+		<version>${sakai.version}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject.dash</groupId>
 		<artifactId>dashboard-api</artifactId>
-		</dependency>
+	</dependency>
     	
     	<!-- third party dependencies -->
 		<dependency>
