--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<version>1.0-SNAPSHOT</version>
 	
 	<parent>
-		<groupId>org.sakaiproject.purepoms</groupId>
-		<artifactId>sakai-standard-tool</artifactId>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>master</artifactId>
 		<version>2.10-SNAPSHOT</version>
 	</parent>
 	
