--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,19 @@
 			<id>projectlombok.org</id>
 			<url>http://projectlombok.org/mavenrepo</url>
 		</repository>
+	<repository>
+		<id>sonatype-nexus-snapshots</id>
+		<name>Sonatype Nexus Snapshots</name>
+		<url>
+			https://oss.sonatype.org/content/repositories/snapshots
+		</url>
+		<releases>
+			<enabled>false</enabled>
+		</releases>
+		<snapshots>
+			<enabled>true</enabled>
+		</snapshots>
+	</repository>
 	</repositories>
 	
 	<pluginRepositories>
@@ -190,23 +203,5 @@
     <module>impl</module>
     <module>util</module>
     <module>pack</module>
-  </modules>
-  
-	<profiles>
-		<profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <sakai.version>2.10-SNAPSHOT</sakai.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>sakai-2.9</id>
-            <properties>
-                <sakai.version>2.9-SNAPSHOT</sakai.version>
-            </properties>
-        </profile>
-	</profiles>
+  </modules>  
 </project>
