--- a/util/pom.xml
+++ b/util/pom.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-    	<artifactId>dashboard</artifactId>
-    	<groupId>org.sakaiproject.dash</groupId>
-    	<version>1.0-SNAPSHOT</version>
- 	</parent>
-	
+		<artifactId>dashboard</artifactId>
+		<groupId>org.sakaiproject.dash</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<name>dashboard - Utility</name>
 	<groupId>org.sakaiproject.dash</groupId>
 	<artifactId>dashboard-util</artifactId>
 
 	<packaging>jar</packaging>
-  	
-  	<dependencies>
 
-    	<!-- project dependencies -->
-		
+	<dependencies>
+
+		<!-- project dependencies -->
+
 		<!-- Sakai dependencies -->
-        <dependency>
-            <groupId>org.sakaiproject.kernel</groupId>
-            <artifactId>sakai-kernel-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject.kernel</groupId>
-            <artifactId>sakai-kernel-util</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.sakaiproject.kernel</groupId>
+			<artifactId>sakai-kernel-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sakaiproject.kernel</groupId>
+			<artifactId>sakai-kernel-util</artifactId>
+		</dependency>
 	</dependencies>
-	
+
 	<build/>
-		 
+
 </project>
