--- a/pom.xml
+++ b/pom.xml
@@ -1,53 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<name>dashboard - Base</name>
 	<groupId>org.sakaiproject.dash</groupId>
 	<artifactId>dashboard</artifactId>
-	
+
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
-	
+
 	<parent>
 		<groupId>org.sakaiproject</groupId>
 		<artifactId>master</artifactId>
 		<version>2.10-SNAPSHOT</version>
 	</parent>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
-		
+
 			<!-- project dependencies -->
 			<dependency>
-      			<groupId>org.sakaiproject.dash</groupId>
-      			<artifactId>dashboard-api</artifactId>
-      			<version>1.0-SNAPSHOT</version>
-      			<scope>provided</scope>
-    		</dependency>
-    		<dependency>
-      			<groupId>org.sakaiproject.dash</groupId>
-      			<artifactId>dashboard-impl</artifactId>
-      			<version>1.0-SNAPSHOT</version>
-      			<scope>runtime</scope>
-    		</dependency>
-                <dependency>
-                        <groupId>org.sakaiproject.dash</groupId>
-                        <artifactId>dashboard-util</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                </dependency>
-			
-                <dependency>
-                        <groupId>org.sakaiproject.dash</groupId>
-                        <artifactId>dashboard-bundles</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                        <scope>runtime</scope>
-                </dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-api</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-app</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-impl</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-util</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-bundles</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<scope>runtime</scope>
+			</dependency>
 
 			<!-- third party dependencies -->
 			<dependency>
@@ -59,7 +67,7 @@
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-spring</artifactId>
 				<version>1.4.17</version>
-	    	</dependency>
+			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
@@ -75,7 +83,7 @@
 				<artifactId>log4j</artifactId>
 				<version>1.2.14</version>
 			</dependency>
-<!--
+			<!--
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
@@ -106,74 +114,70 @@
 				<artifactId>commons-configuration</artifactId>
 				<version>1.6</version>
 			</dependency>
-			
+
 			<!-- sakai dependencies -->
-			
+
 
 		</dependencies>
 	</dependencyManagement>
-	
-	
+
+
 	<repositories>
 		<repository>
 			<id>sakai-maven</id>
 			<name>Sakai Maven Repo</name>
 			<layout>default</layout>
 			<url>http://source.sakaiproject.org/maven2</url>
-			<releases>
-            </releases>
+			<releases> </releases>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<repository>
-      		<id>sakai-maven2-snapshots</id>
-      		<name>Sakai Maven Repo</name>
-      		<layout>default</layout>
-      		<url>http://source.sakaiproject.org/maven2-snapshots</url>
-      		<releases>
-                <enabled>false</enabled>
-            </releases>
-      		<snapshots>
-      		</snapshots>
-    	</repository>
-    	<repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
+			<id>sakai-maven2-snapshots</id>
+			<name>Sakai Maven Repo</name>
+			<layout>default</layout>
+			<url>http://source.sakaiproject.org/maven2-snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots> </snapshots>
+		</repository>
+		<repository>
+			<id>default</id>
+			<name>Maven Repository Switchboard</name>
+			<layout>default</layout>
+			<url>http://repo1.maven.org/maven2</url>
+			<releases> </releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>projectlombok.org</id>
 			<url>http://projectlombok.org/mavenrepo</url>
 		</repository>
-	<repository>
-		<id>sonatype-nexus-snapshots</id>
-		<name>Sonatype Nexus Snapshots</name>
-		<url>
+		<repository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>
 			https://oss.sonatype.org/content/repositories/snapshots
 		</url>
-		<releases>
-			<enabled>false</enabled>
-		</releases>
-		<snapshots>
-			<enabled>true</enabled>
-		</snapshots>
-	</repository>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
-	
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>maven2-central-repo</id>
 			<name>Maven2 Central Repo</name>
 			<url>http://repo1.maven.org/maven2/</url>
-			<releases>
-			</releases>
+			<releases> </releases>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -181,8 +185,7 @@
 		<pluginRepository>
 			<id>Sakai Plugin Repo</id>
 			<url>http://source.sakaiproject.org/maven2</url>
-			<releases>
-			</releases>
+			<releases> </releases>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -193,15 +196,16 @@
 			<url>http://oss.sonatype.org/content/repositories/github-releases</url>
 		</pluginRepository>
 	</pluginRepositories>
-	
-	
-	
-  <modules>
-    <module>bundles</module>
-    <module>tool</module>
-    <module>api</module>
-    <module>impl</module>
-    <module>util</module>
-    <module>pack</module>
-  </modules>  
+
+
+
+	<modules>
+		<module>app</module>
+		<module>bundles</module>
+		<module>tool</module>
+		<module>api</module>
+		<module>impl</module>
+		<module>util</module>
+		<module>pack</module>
+	</modules>
 </project>
