DASH-245 Add new mechanism for assigning tasks to particular servers in a cluster to ensure that no more than one server attempts a periodic task.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313416 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -637,3 +637,28 @@ update.RepeatingEventsTime.entityReference = update dash_repeating_event set fir
 
 update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
 
+create.TaskLock.table = create table dash_task_lock \
+( id bigint not null auto_increment, \
+task varchar(255) not null, server_id varchar(255) not null, claim_time datetime, \
+last_update datetime, has_lock bit default 0, primary key (id) ); \
+create index dash_lock_ct_idx on dash_task_lock (claim_time); \
+create unique index dash_lock_ts_idx on dash_task_lock (task, server_id) 
+
+delete.TaskLock.by.task = delete from dash_task_lock where task=?
+
+insert.TaskLock = insert into dash_task_lock (task, server_id, claim_time, last_update) values (?, ?, ?, ?)
+
+select.TaskLocks.by.task = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where task=? order by claim_time
+
+select.TaskLocks.by.task.serverId = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where task=? and server_id=?
+
+select.TaskLocks.by.hasLock = = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where has_lock=1
+
+update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? where id=?
+
+update.TaskLock.lastUpdate = update dash_task_lock set last_update=? where task=? and server_id=?
+
+
