--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -644,3 +644,29 @@ update.RepeatingEventsTime.entityReference = update dash_repeating_event set fir
 
 update.RepeatingEventsTitle.entityReference = update dash_repeating_event set title=? where entity_ref=? 
 
+create.TaskLock.table = create table dash_task_lock \
+( id number not null primary key, \
+task varchar2(255) not null, server_id varchar2(255) not null, claim_time timestamp(9), \
+last_update timestamp(9), has_lock number(1,0) default 0); \
+create sequence dash_task_lock_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_lock_ct_idx on dash_task_lock (claim_time); \
+create unique index dash_lock_ts_idx on dash_task_lock (task, server_id) 
+
+delete.TaskLock.by.task = delete from dash_task_lock where task=?
+
+insert.TaskLock = insert into dash_task_lock (id, task, server_id, claim_time, last_update) values (dash_task_lock_seq, ?, ?, ?, ?)
+
+select.TaskLocks.by.task = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where task=? order by claim_time
+
+select.TaskLocks.by.task.serverId = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where task=? and server_id=?
+
+select.TaskLocks.by.hasLock = = select id,task,server_id,claim_time,last_update,has_lock \
+from dash_task_lock where has_lock=1
+
+update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? where id=?
+
+update.TaskLock.lastUpdate = update dash_task_lock set last_update=? where task=? and server_id=?
+
+
