DASH-248 extra equal signs are removed for select.TaskLocks.by.hasLock query in hsql, mysql and oracle properties files
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313420 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -650,7 +650,7 @@ where task=? order by claim_time
 select.TaskLocks.by.task.serverId = select id,task,server_id,claim_time,last_update,has_lock \
 from dash_task_lock where task=? and server_id=?
 
-select.TaskLocks.by.hasLock = = select id,task,server_id,claim_time,last_update,has_lock \
+select.TaskLocks.by.hasLock = select id,task,server_id,claim_time,last_update,has_lock \
 from dash_task_lock where has_lock=1
 
 update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? where id=?
