DASH-249 use dash_task_lock_seq.NEXTVAL instead
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313422 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -654,7 +654,7 @@ create unique index dash_lock_ts_idx on dash_task_lock (task, server_id)
 
 delete.TaskLock.by.task = delete from dash_task_lock where task=?
 
-insert.TaskLock = insert into dash_task_lock (id, task, server_id, claim_time, last_update) values (dash_task_lock_seq, ?, ?, ?, ?)
+insert.TaskLock = insert into dash_task_lock (id, task, server_id, claim_time, last_update) values (dash_task_lock_seq.NEXTVAL, ?, ?, ?, ?)
 
 select.TaskLocks.by.task = select id,task,server_id,claim_time,last_update,has_lock \
 from dash_task_lock where task=? order by claim_time
