DASH-240 add entityprovider to get Dashboard feed
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313450 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -131,6 +131,19 @@
 			<artifactId>guava</artifactId>
 			<version>r09</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.0</version>	
+		</dependency>
+		<dependency>
+            <groupId>org.sakaiproject.entitybroker</groupId>
+            <artifactId>entitybroker-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.entitybroker</groupId>
+            <artifactId>entitybroker-utils</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
