DASH-252 merged in the patch, and changed entity-reference field length from 256 to 255 in other db files
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313455 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -1,14 +1,14 @@
 # MySQL SQL Statements
 
 create.AvailabilityCheck.table = create table dash_availability_check \
-( id bigint not null auto_increment, entity_ref varchar(265) character set ascii not null, \
+( id bigint not null auto_increment, entity_ref varchar(255) not null, \
 entity_type_id varchar(255) not null, scheduled_time datetime not null, primary key (id)); \
 create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
 create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
-calendar_time datetime not null, calendar_time_label_key varchar(40) character set ascii, title varchar(255) not null, \
-entity_ref varchar(265) character set ascii not null, entity_type bigint not null, subtype varchar(255), context_id bigint not null, \
+calendar_time datetime not null, calendar_time_label_key varchar(40), title varchar(255) not null, \
+entity_ref varchar(255) not null, entity_type bigint not null, subtype varchar(255), context_id bigint not null, \
 repeating_event_id bigint, sequence_num integer, primary key (id) ); \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key, sequence_num); \
@@ -50,8 +50,8 @@ create.EventLog.table = create table dash_event (event_id bigint auto_increment,
 ref varchar (255), context varchar (255), session_id varchar (163), event_code varchar (1), primary key (event_id))
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
-news_time_label_key varchar(40) character set ascii, title varchar(255) not null, \
-entity_ref varchar(265) character set ascii not null, entity_type bigint not null, subtype varchar(255), \
+news_time_label_key varchar(40), title varchar(255) not null, \
+entity_ref varchar(255) not null, entity_type bigint not null, subtype varchar(255), \
 context_id bigint not null, grouping_id varchar(90), primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create index dash_news_grouping_idx on dash_news_item (grouping_id); \
@@ -69,8 +69,8 @@ create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
 create.RepeatingEvent.table = create table if not exists dash_repeating_event (id bigint not null auto_increment, \
 first_time datetime not null, last_time datetime, frequency varchar(40) not null, max_count integer, \
-calendar_time_label_key varchar(40) character set ascii, title varchar(255) not null, \
-entity_ref varchar(265) character set ascii not null, subtype varchar(255), entity_type bigint not null, context_id bigint not null, \
+calendar_time_label_key varchar(40), title varchar(255) not null, \
+entity_ref varchar(255) not null, subtype varchar(255), entity_type bigint not null, context_id bigint not null, \
 primary key (id) ); \
 create index dash_repeating_event_first_idx on dash_repeating_event (first_time); \
 create index dash_repeating_event_last_idx on dash_repeating_event (last_time)
