--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -14,8 +14,80 @@
 	<artifactId>dashboard-impl</artifactId>
 
 	<packaging>jar</packaging>
+	<profiles>
+	    <profile>
+		<id>sakai-2.10</id>
+		<activation>
+		    <activeByDefault>true</activeByDefault>
+		</activation>
+		<!-- Spring & Hibernate -->
+		<dependencies>
+		    <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		    </dependency>
+		    <!-- needed by hibernate unit tests -->
+		    <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+		    </dependency>
 
+		</dependencies>
+	    </profile>
+
+	    <profile>
+		<id>sakai-2.9</id>
+		<dependencies>
+		    <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+		    </dependency>
+		    <dependency>
+			<groupId>org.opensymphony.quartz</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${sakai.quartz.version}</version>
+		    </dependency>
+		</dependencies>
+	    </profile>
+	</profiles>
 	<dependencies>
+		<!-- Apache Commons -->
+		<dependency>
+    		<groupId>commons-pool</groupId>
+    		<artifactId>commons-pool</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>commons-logging</groupId>
+    		<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.sakaiproject.scheduler</groupId>
+		    <artifactId>scheduler-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.sakaiproject.scheduler</groupId>
+		    <artifactId>scheduler-component-shared</artifactId>
+		</dependency>
 
 		<!-- project dependencies -->
 		<dependency>
@@ -50,7 +122,10 @@
 			<groupId>org.sakaiproject.dash</groupId>
 			<artifactId>dashboard-app</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.sakaiproject.dash</groupId>
+			<artifactId>dashboard-hbm</artifactId>
+		</dependency>
 		<!-- third party dependencies -->
 		<dependency>
 			<groupId>log4j</groupId>
@@ -154,6 +229,12 @@
 					<include>**/*.properties</include>
 				</includes>
 			</resource>
+			<resource>
+                <directory>hbm/src/java</directory>
+                <includes>
+                    <include>**/*.hbm.xml</include>
+                </includes>
+            </resource>
 		</resources>
 
 		<!-- unit testing -->
