--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
 
-	<parent>
-		<groupId>org.sakaiproject</groupId>
-		<artifactId>master</artifactId>
-		<version>2.10-SNAPSHOT</version>
-	</parent>
-
+    	<parent>
+        	<groupId>org.sakaiproject</groupId>
+        	<artifactId>master</artifactId>
+        	<version>2.10-SNAPSHOT</version>
+        	<relativePath>../master/pom.xml</relativePath>
+    	</parent>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -25,6 +26,13 @@
 	<dependencyManagement>
 		<dependencies>
 
+            <!-- unit tests are a global dependency -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
 			<!-- project dependencies -->
 			<dependency>
 				<groupId>org.sakaiproject.dash</groupId>
@@ -48,6 +56,12 @@
 				<groupId>org.sakaiproject.dash</groupId>
 				<artifactId>dashboard-util</artifactId>
 				<version>1.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.sakaiproject.dash</groupId>
+				<artifactId>dashboard-hbm</artifactId>
+				<version>1.0-SNAPSHOT</version>
+                <scope>provided</scope>
 			</dependency>
 
 			<dependency>
@@ -207,5 +221,6 @@
 		<module>impl</module>
 		<module>util</module>
 		<module>pack</module>
+		<module>hbm</module>
 	</modules>
 </project>
