--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -39,7 +39,8 @@ insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE'
 insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_NAVIGATION_EVENTS', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_ITEM_DETAIL_EVENTS', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_PREFERENCE_EVENTS', 2); \
-insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_DASH_NAV_EVENTS', 2) 
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_DASH_NAV_EVENTS', 2); \
+insert info dash_config (property_name, property_value) values ('PROP_LOOP_TIMER_ENABLED', 0)  
 
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
