--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -595,6 +595,7 @@ rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_sub
 st.id as type_id, st.identifier as type_identifier, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_repeating_event rep join dash_context site on site.id=rep.context_id join dash_sourcetype st on st.id=rep.entity_type \
+where (rep.last_time is null or sysdate < rep.last_time) \
 order by rep.first_time asc
 
 select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
