DASH-173 changed sql to remove repeating items either passed the max timestamp, or already processed for max count allowed
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313554 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -584,6 +584,16 @@ st.id as type_id, st.identifier as type_identifier, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_repeating_event rep join dash_context site on site.id=rep.context_id join dash_sourcetype st on st.id=rep.entity_type \
 where (rep.last_time is null or sysdate() < rep.last_time) \
+and rep.id not in ( \
+select t3.id \
+from dash_repeating_event t3, \
+(select t1.id as id, count(*) as item_count \
+from dash_repeating_event t1, dash_calendar_item t2 \
+where t1.id = t2.repeating_event_id \
+group by t1.id) t4 \
+where t3.id = t4.id \
+and (t3.max_count is not null and t3.max_count != 0) \
+and t3.max_count = t4.item_count) \
 order by rep.first_time asc
 
 select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
