--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -16,38 +16,46 @@
 	<packaging>jar</packaging>
 	<profiles>
 	    <profile>
-		<id>sakai-2.10</id>
+		<id>sakai10</id>
 		<activation>
 		    <activeByDefault>true</activeByDefault>
 		</activation>
-		<!-- Spring & Hibernate -->
+		<!-- Spring, Hibernate & Quartz -->
 		<dependencies>
 		    <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
+			    <groupId>org.hibernate</groupId>
+			    <artifactId>hibernate-core</artifactId>
 		    </dependency>
 		    <!-- needed by hibernate unit tests -->
 		    <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
+			    <groupId>org.hibernate</groupId>
+			    <artifactId>hibernate-ehcache</artifactId>
 		    </dependency>
 		    <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-core</artifactId>
 		    </dependency>
 		    <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-beans</artifactId>
 		    </dependency>
 		    <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-context</artifactId>
 		    </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <scope>test</scope>
+            </dependency>
 		    <dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
+			    <groupId>org.quartz-scheduler</groupId>
+			    <artifactId>quartz</artifactId>
 		    </dependency>
-
 		</dependencies>
 	    </profile>
 
@@ -55,91 +63,110 @@
 		<id>sakai2.9</id>
 		<dependencies>
 		    <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
+			    <groupId>org.hibernate</groupId>
+			    <artifactId>hibernate</artifactId>
 		    </dependency>
-		    <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-		    </dependency>
-		    <dependency>
-			<groupId>org.opensymphony.quartz</groupId>
-			<artifactId>quartz</artifactId>
-			<version>${sakai.quartz.version}</version>
-		    </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring</artifactId>
+                <version>${sakai.spring.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-mock</artifactId>
+                <version>2.0.8</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.opensymphony.quartz</groupId>
+                <artifactId>quartz</artifactId>
+                <version>${sakai.quartz.version}</version>
+            </dependency>
 		</dependencies>
 	    </profile>
 	</profiles>
-	<dependencies>
-		<!-- Apache Commons -->
-		<dependency>
-    		<groupId>commons-pool</groupId>
-    		<artifactId>commons-pool</artifactId>
-		</dependency>
-		<dependency>
-    		<groupId>commons-logging</groupId>
-    		<artifactId>commons-logging</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>org.sakaiproject.scheduler</groupId>
-		    <artifactId>scheduler-api</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>org.sakaiproject.scheduler</groupId>
-		    <artifactId>scheduler-component-shared</artifactId>
-		</dependency>
 
+	<dependencies>
 		<!-- project dependencies -->
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+            <artifactId>dashboard-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+            <artifactId>dashboard-app</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.dash</groupId>
+            <artifactId>dashboard-hbm</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.sakaiproject.assignment</groupId>
 			<artifactId>sakai-assignment-api</artifactId>
-			<version>${sakai.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sakaiproject.announcement</groupId>
 			<artifactId>sakai-announcement-api</artifactId>
-			<version>${sakai.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sakaiproject.calendar</groupId>
 			<artifactId>sakai-calendar-api</artifactId>
-			<version>${sakai.version}</version>
-			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.sakaiproject.entitybroker</groupId>
+            <artifactId>entitybroker-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.entitybroker</groupId>
+            <artifactId>entitybroker-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-component-manager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-util</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.sakaiproject.message</groupId>
 			<artifactId>sakai-message-api</artifactId>
-			<version>${sakai.version}</version>
-			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.dash</groupId>
-			<artifactId>dashboard-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.dash</groupId>
-			<artifactId>dashboard-app</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.dash</groupId>
-			<artifactId>dashboard-hbm</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-component-shared</artifactId>
+        </dependency>
+
 		<!-- third party dependencies -->
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
--->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -151,74 +178,28 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-configuration</groupId>
-			<artifactId>commons-configuration</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.0</version>
+        </dependency>
 
-		<!-- Sakai dependencies -->
+		<!-- Non-Spring testing dependencies -->
 		<dependency>
-			<groupId>org.sakaiproject.kernel</groupId>
-			<artifactId>sakai-kernel-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.kernel</groupId>
-			<artifactId>sakai-component-manager</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.sakaiproject.kernel</groupId>
-			<artifactId>sakai-kernel-util</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.sakaiproject.entitybroker</groupId>
-			<artifactId>entitybroker-api</artifactId>
-		</dependency>
-
-		<!-- testing dependencies -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-mock</artifactId>
-			<version>2.0.8</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.7</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>1.2.2</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>r09</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>0.11.0</version>	
-		</dependency>
-		<dependency>
-            <groupId>org.sakaiproject.entitybroker</groupId>
-            <artifactId>entitybroker-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject.entitybroker</groupId>
-            <artifactId>entitybroker-utils</artifactId>
-        </dependency>
 	</dependencies>
 
 	<build>
